	4413 Hodremlin_Card		Small chance that for 10 seconds you gain 30 Perfect Dodge when attacked.
	4417 Ice_Titan_Card		Chance that for 10 seconds you'll gain 10 Armor Defence while taking magic or physical damage.
	4425 Atros_Card			Chance that for 10 seconds your aspd will increase by 100% while attacking.

========================
09/10
	* Fixed Garm's and Bacsojin's skills being cancelable [Playtester]
	* Fixed Asura Strike autocast being self targetted [Playtester]
09/09
	* Fixed size of NPC_EVILLAND [Playtester]
	* Updated some cards to use the new format of bonus3 bAddEff* [Skotlex]
	* Commented unimplemented mob skills [Playtester]
	* Added Cursed Abbey mob skills thanks to Doddler [Playtester]
	- also fixed level of MVP heal which was once again 10 instead of 11
09/08
	* Updated item_db, mob_db and skill_cast_db [Playtester]
	- updated prices of new etc drops (guessed values)
	- updated Cursed Abbey mob drops
	- fixed db name of Thanatos
	- fixed cast time of Rebirth Spirit
09/07
	* Rev. 1113 Added more items; mostly rental. New pet tames, eggs. [L0ne_W0lf]
	- Updated and corrected some item names, both kRO and iRO names.
	- Skill need correct view-ids for new headgears.
	* Added new pets: Green Maiden, spring Rabbit, Goblins 1, 2 and 4,
	  Deleter, Diabolic, and Wanderer. The data is mostly custom.
	* Corrected the item trade entry for the luxurious key.
	* Added basic data for Spring Rabbit pet mob.
	* Updated packet_db.txt with latest info [ultramage]
09/06
	* Fixed some item names and updated drop rates a little [Playtester]
	* Updated two prices and a drop rate [Playtester]
09/04
	* Some drop and item fixes [Playtester]
	- also updated sql files
	* Added drops to Cursed Abbey mobs [Playtester]
	* Updated several item scripts to use bonus3 autospells rather than bonus4
	  ones. [Skotlex]
	* Added the 11.3 equips to the monster drops [Playtester]
	* Fixed all the 11.3 equips [Playtester]
	- please test them ingame
09/03