@@ -4,6 +4,16 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/09/09
+	* Removed bonus bAddEffWhenHitShort as it is unneeded and unused.
+	* Corrected getpetinfo so it actually returns "null" when there's no pet
+	  and you request the name (the docs state it so).
+	* Added gethominfo (which behaves in the same way as getpetinfo).
+	* Corrected bonus3 bAutoSpell(WhenHit) to select target enemy (rather than
+	  self) for skills with inf self and inf2 'don't target self' (aka:
+	  auto-select target skills).
+	* Corrected map_foreachinpath to do a wall check for targets beyond the
+	  initially selected tile.
+2007/09/09
 	* Modified bonus3 bAddEff/bAddEffWhenHit so that the last parameter is now
 	  passed directly as "trigger" flag. The possible trigger values are
 	  ATF_LONG, ATF_SHORT, ATF_TARGET, ATF_SELF. Explanation added to
