@@ -165,8 +165,6 @@ bonus2 bHPRegenRate,n,x;		Gain n HP every x milliseconds
 bonus2 bHPLossRate,n,x;			Lose n HP every x milliseconds
 bonus2 bAddEffWhenHit,n,x;		x/100% chance to cause n state to the enemy when
 					being hit by physical damage
-bonus2 bAddEffWhenHitShort,n,x;		n% chance to cause x state to the enemy when
-					being hit by physical close range damage
 bonus2 bSkillAtk,n,x;			Increase damage of skill n by x%
 bonus2 bSkillHeal,n,x;			Increase heal amount of skill n by x%
 bonus2 bAddDamageByClass,n,x;		When being hit by monster of class n increase
