@@ -1193,12 +1193,13 @@ enum _sp {
 	SP_SKILL_ATK, SP_UNSTRIPABLE, SP_FREE, // 2018-2020
 	SP_SP_GAIN_VALUE, SP_HP_REGEN_RATE, SP_HP_LOSS_RATE, SP_ADDRACE2, SP_HP_GAIN_VALUE, // 2021-2025
 	SP_SUBSIZE, SP_HP_DRAIN_VALUE_RACE, SP_ADD_ITEM_HEAL_RATE, SP_SP_DRAIN_VALUE_RACE, SP_EXP_ADDRACE,	// 2026-2030
-	SP_SP_GAIN_RACE, SP_SUBRACE2, SP_ADDEFF_WHENHIT_SHORT,	// 2031-2033
+	SP_SP_GAIN_RACE, SP_SUBRACE2, SP_FREE2,	// 2031-2033
 	SP_UNSTRIPABLE_WEAPON,SP_UNSTRIPABLE_ARMOR,SP_UNSTRIPABLE_HELM,SP_UNSTRIPABLE_SHIELD,  // 2034-2037
 	SP_INTRAVISION, SP_ADD_MONSTER_DROP_ITEMGROUP, SP_SP_LOSS_RATE, // 2038-2040
 	SP_ADD_SKILL_BLOW, SP_SP_VANISH_RATE //2041
 	//Before adding new bonuses, reuse the currently free slots:
 	//2020 (SP_FREE) (previously SP_ADD_DAMAGE_BY_CLASS)
+	//2033 (SP_FREE2) (previously SP_ADDEFF_WHENHIT_SHORT)
 };
 
 enum _look {
